--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:backend": "pnpm --filter=backend dev",
-    "dev:frontend": "pnpm --filter=frontend dev"
+    "build:backend": "pnpm --filter=backend build",
+    "start:backend": "pnpm --filter=backend start",
+    "dev:frontend": "pnpm --filter=frontend dev",
+    "build:frontend": "pnpm --filter=frontend build"
   },
   "keywords": [],
   "author": "Xuan",
