--- a/package.json
+++ b/package.json
@@ -13,5 +13,9 @@
   },
   "keywords": [],
   "author": "Xuan",
-  "license": "ISC"
+  "license": "ISC",
+  "packageManager": "pnpm@9.4.0",
+  "engines": {
+    "node": "^20"
+  }
 }
